# mcp-micro-shell

./: README.ko.md  README.md  pyproject.toml
.github/workflows/: publish.yml
mcp_micro_shell/: __main__.py  server.py
