[project]
name = "mcp-micro-shell"
version = "0.1.0"
description = "A lightweight MCP server providing shell execution and environment integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.27.1",
]

[project.scripts]
mcp-micro-shell = "mcp_micro_shell.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
